--- a/nspanel_blueprint.yaml
+++ b/nspanel_blueprint.yaml
@@ -3,7 +3,7 @@
 #############################################################
 
 blueprint:
-  name: NSPanel Configuration
+  name: NSPanel Configuration (andreas-berg)
   description: >
     # Configuration and synchronization NSPanel via Blueprint
 
@@ -33,7 +33,7 @@ blueprint:
     🎉 Roadmap Roadmap can be found here [Roadmap](https://github.com/Blackymas/NSPanel_HA_Blueprint/labels/roadmap)
 
 
-    ℹ️ Version: v.3.4
+    ℹ️ Version: v.3.4-ab
 
   source_url: https://github.com/Blackymas/NSPanel_HA_Blueprint/blob/main/nspanel_blueprint.yaml
   domain: automation
@@ -3527,7 +3527,7 @@ trigger_variables:
 
 variables:
   ##### GENERAL #####
-  blueprint_version: '3.4'
+  blueprint_version: '3.4-ab'
   language: !input 'language'
   date_format_temp: !input 'date_format'
   #Avoid breaking change for existing users with legacy type format
