--- a/nspanel_blueprint.yaml
+++ b/nspanel_blueprint.yaml
@@ -6612,7 +6612,7 @@ action:
                                                    (repeat.item.icon_color_rgb[2] //(2**3))
                                               }}
                                           continue_on_error: true
-                                        ### ICON Font ###
+                                        ### ICON Text ###
                                         - *delay-default
                                         - service: '{{ nextion.command.text_printf }}'
                                           data:
@@ -6646,14 +6646,14 @@ action:
                                                (repeat.item.label_color_rgb[2] //(2**3))
                                           }}
                                       continue_on_error: true
-                                    ### LABEL Font ###
+                                    ### LABEL Text ###
                                     - *delay-default
                                     - service: '{{ nextion.command.text_printf }}'
                                       data:
                                         component: '{{ repeat.item.page }}.{{ repeat.item.component }}{{ "_state" if repeat.item.page == page.home }}'
                                         message: >
                                           {{
-                                            (repeat_item_state | round(1))
+                                            ((repeat_item_state | float / 1000.0) | round(3) if repeat_item_state >= 1000 else repeat_item_state | round(1 if repeat_item_state < 100 else 0) )
                                             if is_number(repeat_item_state)
                                             else repeat_item_state
                                           }}
@@ -6673,14 +6673,14 @@ action:
                                                (repeat.item.label_color_rgb[2] //(2**3))
                                           }}
                                       continue_on_error: true
-                                    ### UNIT Font ###
+                                    ### UNIT Text ###
                                     - *delay-default
                                     - service: '{{ nextion.command.text_printf }}'
                                       data:
                                         component: '{{ repeat.item.page }}.{{ repeat.item.component }}{{ "_unit" if repeat.item.page == page.home }}'
                                         message: >
                                           {{
-                                            ((state_attr(repeat.item.entity, "unit_of_measurement") | default("") if state_attr(repeat.item.entity, "unit_of_measurement") is string else ""))
+                                            (("k" if repeat_item_state >= 1000 else "") ~ (state_attr(repeat.item.entity, "unit_of_measurement") | default("") if state_attr(repeat.item.entity, "unit_of_measurement") is string else ""))
                                             if is_number(repeat_item_state)
                                             else ""
                                           }}
